# onsem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  onsem-config.cmake  run_stt.sh  run_stt_release.sh
chatbotplanner/: CMakeLists.txt  onsemchatbotplanner-config.cmake
chatbotplanner/src/: arithmeticevaluator.cpp  chatbotplanner.cpp  fact.cpp  goal.cpp  linguisticplanner.cpp
chatbotplanner/tests/: CMakeLists.txt
chatbotplanner/tests/src/: test_arithmeticevaluator.cpp  test_arithmeticevaluator.hpp  test_chatbotplanner.cpp
common/: CMakeLists.txt  onsemcommon-config.cmake
common/src/: keytostreams.cpp
common/src/utility/: getendofparenthesis.cpp  random.cpp  string.cpp  uppercasehandler.cpp
compilermodel/: CMakeLists.txt  onsemcompilermodel-config.cmake
compilermodel/src/: lingdbanimationtag.cpp  lingdbanimationtag.hpp  lingdbdynamictrienode.cpp  lingdbflexions.cpp  lingdbmeaning.cpp  lingdbmeaningtowords.cpp  lingdbmodifier.cpp  lingdbmultimeaningnode.cpp  lingdbstring.cpp  lingdbtree.cpp  lingdbwordforms.cpp  linguisticintermediarydatabase.cpp  meaningandconfidence.cpp
compilermodel/src/concept/: lingdbconcept.cpp  lingdbconcept.hpp  lingdblinktoaconcept.cpp  lingdblinktoaconcept.hpp
compilermodel/src/databaserules/: lingdbquestionwords.cpp
compilermodel/src/loaders/: anydatabaseloader.cpp  cptsdatabaseloader.cpp  cptsdatabaseloader.hpp  deladatabaseloader.cpp  gfsdatabaseloader.cpp  gfsdatabaseloader.hpp  omldloader.cpp  omldloader.hpp  rladatabaseloader.cpp  rladatabaseloader.hpp  wlksdatabaseloader.cpp  xmldatabaseloader.cpp  xmldatabaseloader.hpp
compilermodel/src/savers/: binarydatabaseconceptssaver.cpp  binarydatabasedicosaver.cpp  binarydatabasesaver.cpp  binarytradsaver.cpp  traductionwriter.cpp
contextualplanner/: CMakeLists.txt  contextualplanner-config.cmake
contextualplanner/include/contextualplanner/: alias.hpp  api.hpp  arithmeticevaluator.hpp  contextualplanner.hpp  fact.hpp  goal.hpp  observableunsafe.hpp
contextualplanner/src/: arithmeticevaluator.cpp  contextualplanner.cpp  fact.cpp  goal.cpp
contextualplanner/tests/: CMakeLists.txt
contextualplanner/tests/src/: test_arithmeticevaluator.cpp  test_chatbotplanner.cpp
databasegenerator/: CMakeLists.txt
databasegenerator/src/: main.cpp
databasegeneratorprepocessing/databasegeneratorprepocessinggui/: CMakeLists.txt
databasegeneratorprepocessing/databasegeneratorprepocessinggui/src/: dbGeneratorpreprocessingwindow.cpp  dbGeneratorpreprocessingwindow.hpp  dbGeneratorpreprocessingwindow.ui  main.cpp
databasegeneratorprepocessing/misc/dictionaryextractor/: CMakeLists.txt  onsemdictionaryextractor-config.cmake
doc/: EXAMPLES.md  (+6 more)
lingdbeditor/: CMakeLists.txt  onsemlingdbeditor-config.cmake
lingdbeditor/src/: allingdbanimationtag.cpp  allingdbanimationtag.hpp  allingdbdynamictrienode.cpp  allingdbflexions.cpp  allingdbmeaning.cpp  allingdbmeaningtowords.cpp  allingdbmodifier.cpp  allingdbmultimeaningnode.cpp  allingdbstring.cpp  allingdbtree.cpp  allingdbwordforms.cpp  linguisticintermediarydatabase.cpp  meaningandconfidence.cpp
lingdbeditor/src/concept/: allingdbconcept.cpp  allingdbconcept.hpp  allingdblinktoaconcept.cpp  allingdblinktoaconcept.hpp
lingdbeditor/src/databaserules/: allingdbquestionwords.cpp
lingdbeditor/src/loaders/: alanydatabaseloader.cpp  alcptsdatabaseloader.cpp  alcptsdatabaseloader.hpp  aldeladatabaseloader.cpp  algfsdatabaseloader.cpp  algfsdatabaseloader.hpp  alrladatabaseloader.cpp  alrladatabaseloader.hpp  alwlksdatabaseloader.cpp  alxmldatabaseloader.cpp  alxmldatabaseloader.hpp
lingdbeditor/src/savers/: albinarydatabaseconceptssaver.cpp  albinarydatabasedicosaver.cpp  albinarydatabasesaver.cpp  albinarytradsaver.cpp  traductionwriter.cpp
onsemgui/: CMakeLists.txt
onsemgui/guiutility/: CMakeLists.txt  guiutility-config.cmake
onsemgui/guiutility/src/: lineedithistoricwrapper.cpp
onsemgui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
onsemgui/src/qobject/: scrollpanel.cpp  scrollpanel.hpp
semanticdebugger/: CMakeLists.txt  onsemsemanticdebugger-config.cmake
semanticdebugger/src/: aretextsequivalent.cpp  diagnosisprinter.cpp  dotsaver.cpp  loaddbpediatxtmemory.cpp  semanticdebug.cpp  textananlyzedebugger.cpp  timechecker.cpp
semanticdebugger/src/printer/: semanticprinter.cpp  semexplinestostr.cpp  sentimentspecprinter.cpp  sentimentspecprinter.hpp
semantictotext/: CMakeLists.txt  onsemsemantictotext-config.cmake
semantictotext/src/: actionrecognizer.cpp  bnfparser.cpp  recommendations.cpp  semanticconverter.cpp  semanticintent.cpp  semanticrecommendations.cpp  semexpoperators.cpp  semexpsimplifer.cpp  serialization.cpp  triggers.cpp
semantictotext/src/controller/: semexpcontroller.cpp  semexpcontroller.hpp
semantictotext/src/conversion/: conditionsadder.cpp  conditionsadder.hpp  imperativeformadder.cpp  imperativeformadder.hpp  mandatoryformconverter.cpp  mandatoryformconverter.hpp  occurrencerankconverter.cpp  occurrencerankconverter.hpp  reasonofrefactor.cpp  reasonofrefactor.hpp  simplesentencesplitter.cpp  simplesentencesplitter.hpp
semantictotext/src/executor/: executorlogger.cpp  textexecutor.cpp  virtualexecutor.cpp
streamdatabaseaccessor/: CMakeLists.txt  onsemstreamdatabaseaccessor-config.cmake
streamdatabaseaccessor/src/: streamdatabaseaccessor.cpp
tests/gtests/: CMakeLists.txt
tests/onsemgtests/: CMakeLists.txt
tests/onsemtester/: CMakeLists.txt  onsemtester-config.cmake
texttosemantic/: CMakeLists.txt  onsemtexttosemantic-config.cmake
texttosemantic/src/: algorithmsetforalanguage.cpp  languagedetector.cpp  linguisticanalyzer.cpp
typeallocatorandserializer/: CMakeLists.txt  onsemtypeallocatorandserialyzer-config.cmake
typeallocatorandserializer/oldtests/: testsfastpoolallocator.cppfile  testsfastpoolallocator.hppfile
typeallocatorandserializer/src/: componentpoolallocator.cpp  compositepoolallocator.cpp
voicebotgui/: CMakeLists.txt  qiproject.xml
voicebotgui/guiutility/: CMakeLists.txt
voicebotgui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+1315 files in other folders)
